feat(groups): add group image via https url (#1225) (#1245)
